--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,7 +3,7 @@
     font-size: 26px;
 }
 
-span {
+.numbers {
     display: inline-block;
     margin: 0.5em;
     text-align: center;
@@ -11,6 +11,7 @@ span {
     width: 24px;
     border-radius: 50%;
     cursor: pointer;
+    border-width: 0;
 }
 
 .selected {
@@ -36,4 +37,8 @@ span {
 
 h3 {
     display: inline-block;
+}
+
+.numbers-disabled {
+    cursor: not-allowed;
 }
