--- a/app/css/main.css
+++ b/app/css/main.css
@@ -42,3 +42,18 @@ h3 {
 .numbers-disabled {
     cursor: not-allowed;
 }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.fade-in {
+    -webkit-animation: fadein 2s;
+    animation: fadein 2s;
+}
